--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,4 +16,7 @@
     <string name="joueur1">player1</string>
     <string name="joueur2">player2</string>
 
+    <string name="btn_connection">Connect</string>
+    <string name="btn_deconnection">Deconnect</string>
+
 </resources>
