--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="joueur1">joueur1</string>
     <string name="joueur2">joueur2</string>
 
+    <string name="btn_connection">Connection</string>
+    <string name="btn_deconnection">Deconnection</string>
+
 </resources>
