Atelier 13 fini, ajout du bouton partieReseau, ajout des XML, ajout des classes requises, ajout des calls server.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="btn_connection">Connection</string>
     <string name="btn_deconnection">Deconnection</string>
 
+    <string name="btn_jouerligne">Jouer en ligne</string>
+
 </resources>
