--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,4 +19,6 @@
     <string name="btn_connection">Connect</string>
     <string name="btn_deconnection">Deconnect</string>
 
+    <string name="btn_jouerligne">Play online</string>
+
 </resources>
